<resources>
    <string name="app_name">Personas</string>
    <string name="titulo_crear_persona">CREAR PERSONAS</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="titulo_listar_personas">LISTAR PERSONAS</string>
    <string name="numero">No.</string>
</resources>